--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -24,5 +24,6 @@
     "Reset Password":"パスワードリセット",
     "Click button below and reset password.":"下のボタンをクリックしてパスワードを再設定してください。",
     "Reset password":"パスワードリセット",
-    "If you did not request a password reset, no further action is required.":"心当たりがない場合は、本メッセージは破棄してください。"
+    "If you did not request a password reset, no further action is required.":"心当たりがない場合は、本メッセージは破棄してください。",
+    "Regards":"引き続きのご利用をよろしくお願いいたします。",
 }
