--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -21,9 +21,8 @@
     "Verify Email Address":"メールアドレス確認",
     "If you did not create an account, no further action is required.":"心当たりがない場合は、本メッセージは破棄してください。",
 
-    "Reset Password":"パスワードリセット",
     "Click button below and reset password.":"下のボタンをクリックしてパスワードを再設定してください。",
     "Reset password":"パスワードリセット",
     "If you did not request a password reset, no further action is required.":"心当たりがない場合は、本メッセージは破棄してください。",
-    "Regards":"引き続きのご利用をよろしくお願いいたします。",
+    "Regards":"引き続きのご利用をよろしくお願いいたします。"
 }
